# Apache_Variance_Debugger

./: .gitignore  CMakeLists.txt  Carlos.todos  Debugger  Debugger.h  Expressions.h  Header.h  Invar.cpp  Invar.h  Makefile  NFAs.cpp  NFAs.h  Parser.cpp  README.md  Results.h  Scanner.cpp  Scope.cpp  ctre.hpp  cw.txt  main.cpp  pipair.sh  tmp.txt  tokens.h
Debugger/: Debug.cpp  Func.cpp  Invar.cpp  Makefile  NFAs.cpp  Parser.cpp  Scanner.cpp  Scope.cpp  main.cpp
Headers/: All.h  Debugger.h  Func.h  Globals.h  Invar.h  NFAs.h  Parser.h  Scanner.h  Scope.h
Output/: out1.txt
Prototyping/: Scnr_P.cpp  Scnr_P.h  main.cpp  test.txt
Tests/: test0.txt  test1.txt  test2.txt  test3.txt
include/: All.h  Debugger.h  Globals.h  NFAs.h  Parse.h  Parser.h  Scanner.h  Scope.h
pi/httpd-2.4.41/: .one.txt.swp  .two.txt.swp  configure  one.txt  two.txt
pi/httpd-2.4.41/include/: .http_config.h.swp
pi/httpd-2.4.41/server/: .request.c.swp
pi/partA/: Debugger  Makefile  TODO.txt  out.txt  pipair  verify.sh
pi/partA/include/: Func.h  NFAs.h  Scope.h
pi/partA/src/: Debugger.cpp  Func.cpp  Invar.cpp  NFAs.cpp  Parse.cpp  Scope.cpp
pi/partA/test1/: cg.txt  hello.bc  test1.bc
pi/partA/test2/: cg.txt  main.bc  test2  test2.bc  test2_3_65.out
pi/partC/: Debugger  Makefile  pipair
pi/partD/: Makefile
pi/partE/: .gitignore  pipair
proj-skeleton/: README
proj-skeleton/test2/: gold_3_65
proj-skeleton/test3/: gold_10_80
src/: Debug.cpp  Debugger.cpp  Func.cpp  Invar.cpp  NFAs.cpp  Parse.cpp  Parser.cpp  Scanner.cpp  Scope.cpp
tests/: test0.txt  test2.txt
(+29 files in other folders)
